fonts added and some basic css

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
+/* apply a natural box layout model to all elements, but allowing components to change */
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: 1.6rem;
+  font-family: "Lato Light", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+@font-face {
+  font-family: "Lato Light";
+  src: local("Lato"), url(./fonts/Lato-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Lato Regular";
+  src: local("Lato"), url(./fonts/Lato-Regular.ttf) format("truetype");
+}
+button {
+  background-color: transparent;
+  color: #FFFFFF;
+  border: 1px solid #FFFFFF;
+  font-family: "Lato Regular";
+  height: 4rem;
+  line-height: 4rem;
+}
+/* responsive images */
+img {
+  width: 100%;
+  height: auto;
+}
+.ui.container {
+  max-width: 102.4rem;
+  margin: 0 auto;
+}
+.ui.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 553px 553px;
+  gap: 40px;
+}
+.ui.card {
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #FFFFFF;
+  padding: 0 4.1rem;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  position: relative;
+  background-blend-mode: normal;
+}
+.ui.card .header{
+  font-size: 4.5rem;
+  font-family: "Lato Regular";
 }
