--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ code {
   font-family: "Lato Regular";
   src: local("Lato"), url(./fonts/Lato-Regular.ttf) format("truetype");
 }
+
+@font-face {
+  font-family: "Lato Bold";
+  src: local("Lato"), url(./fonts/Lato-Bold.ttf) format("truetype");
+}
 button {
   background-color: transparent;
   color: #ffffff;
