--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,6 @@ button {
   border: 1px solid #ffffff;
   font-family: "Lato Regular";
   height: 4rem;
-  line-height: 4rem;
 }
 /* responsive images */
 img {
@@ -100,4 +99,12 @@ img {
 .ui.card .header {
   font-size: 4.5rem;
   font-family: "Lato Regular";
+}
+.footer__content {
+  margin-top: 4.1rem;
+  padding-top: 3rem;
+  border-top: dotted 0.1rem #000000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
