--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,3 +1,34 @@
+.ui.card {
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #ffffff;
+  padding: 0 4.1rem;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  position: relative;
+  background-blend-mode: normal;
+  padding-bottom: 5rem;
+}
+.ui.card .extra {
+  margin-bottom: 3.5rem;
+}
+.thumbs-up {
+  background-color: var(--thumbs-up-color);
+}
+.thumbs-down {
+  background-color: var(--thumbs-down-color);
+}
+.ui.card .header {
+  font-size: 4.5rem;
+  font-family: "Lato Regular";
+}
+
+@media (max-width: 768px) {
+.ui.card .header {
+  font-size: 2.5rem;
+}
+}
 .card__metadata {
   font-size: 1.2rem;
 }
