--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,6 @@
 header {
-  position:relative; 
-  z-index: 2;
+  position: relative;
+  z-index: 1;
 }
 header h1 {
   margin: 0;
@@ -13,7 +13,7 @@ header h1 {
   justify-content: flex-end;
   align-items: center;
   color: #ffffff;
-  height:  10rem;
+  height: 10rem;
 }
 
 .header__brand {
@@ -25,7 +25,15 @@ header h1 {
   list-style: none;
   padding-left: 0;
 }
+
 @media (min-width: 769px) {
+
+  .header__main-nav--inline  li {
+    margin-left: 5rem;
+  }
+  .header__search {
+    margin-left: 5rem;
+  }
   .header__mobile-nav {
     display: none;
   }
@@ -41,10 +49,20 @@ header h1 {
   font-size: 25px;
   cursor: pointer;
 }
-.menuOpen  .header__main-nav {
+.openMenu .header__main-nav {
   right: 0;
 }
 @media (max-width: 768px) {
+  .openMenu:after {
+    content: "";
+    position: fixed;
+    z-index: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.5;
+  }
   .header__main-nav {
     position: fixed;
     top: 0;
@@ -53,7 +71,7 @@ header h1 {
     height: 100vh;
     z-index: 100;
     color: #000000;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     padding: 4rem 2rem;
   }
   .header__main-nav li:first-child {
@@ -66,4 +84,13 @@ header h1 {
   .header__main-nav--inline {
     flex-direction: column;
   }
+}
+.header__mobile-nav {
+  font-size: 3rem;
+  margin-left: 3rem;
+  cursor: pointer;
+}
+
+.header__search {
+  font-size: 2rem;
 }
