--- a/src/components/submit.css
+++ b/src/components/submit.css
@@ -12,8 +12,20 @@
   margin-top: 3.5rem;
   padding: 3rem 3rem 3rem 1rem;
 }
+
 .submit__text {
   font-size: 3rem;
+}
+@media (max-width: 768px) {
+  .submit__text {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom:2rem;
+  }
+  .submit{
+    flex-direction: column;
+    height: auto;
+  }
 }
 .submit button.inverse {
   font-size: 2rem;
