some small ui fixes in header and footer

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -26,8 +26,14 @@ header h1 {
   padding-left: 0;
 }
 
+.header__main-nav a {
+  text-decoration: none;
+}
 @media (min-width: 769px) {
 
+  .header__main-nav a {
+    color: white;
+  }
   .header__main-nav--inline  li {
     margin-left: 5rem;
   }
@@ -90,7 +96,6 @@ header h1 {
   margin-left: 3rem;
   cursor: pointer;
 }
-
 .header__search {
   font-size: 2rem;
 }
