--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -78,8 +78,8 @@
   height: 5.5rem;
   line-height: 5.5rem;
   overflow: hidden;
+  width: 100%;
 }
-
 @media (max-width: 1200px) {
   .hero__closing {
     display: none;
