--- a/src/components/header.css
+++ b/src/components/header.css
@@ -75,12 +75,14 @@ header h1 {
     width: 70vw;
     height: 100vh;
     z-index: 100;
-    color: #000000;
     background-color: #ffffff;
     padding: 4rem 2rem;
   }
   .header__main-nav li:first-child {
     border-top: solid #535353 0.1rem;
+  }
+  .header__main-nav a {
+    color: #000000;
   }
   .header__main-nav li {
     padding: 1rem 0.5rem;
